Bottom justify loop histories. Fixes #4.

--- a/ScoreCard/Views/MainWindow.xaml
+++ b/ScoreCard/Views/MainWindow.xaml
@@ -147,7 +147,7 @@
                                         <ItemsControl ItemsSource="{Binding Value}">
                                             <ItemsControl.ItemsPanel>
                                                 <ItemsPanelTemplate>
-                                                    <StackPanel Orientation="Vertical"/>
+                                                    <StackPanel Orientation="Vertical" VerticalAlignment="Bottom"/>
                                                 </ItemsPanelTemplate>
                                             </ItemsControl.ItemsPanel>
                                             <ItemsControl.ItemTemplate>
