--- a/ScoreCard/Views/MainWindow.xaml
+++ b/ScoreCard/Views/MainWindow.xaml
@@ -4,12 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ScoreCard.Views"
-        xmlns:models="clr-namespace:ScoreCard.Models"
         xmlns:designData="clr-namespace:ScoreCard.DesignData"
         xmlns:models1="clr-namespace:ScoreCard.Models"
         mc:Ignorable="d" WindowState="Maximized"
         d:DataContext="{d:DesignInstance Type=designData:MainViewModelDesignData, IsDesignTimeCreatable=True}"
-        Title="Score Card" Height="350" Width="700">
+        Title="Score Card" Height="350" Width="800">
     <Window.Resources>
         <local:PossibilityConverter x:Key="PossibilityConverter"/>
         <SolidColorBrush Color="LightGray" x:Key="BorderBrush"/>
@@ -114,7 +113,17 @@
                                                                 <ColumnDefinition SharedSizeGroup="PlayerName"/>
                                                             </Grid.ColumnDefinitions>
                                                             <Border BorderThickness="0,0,1,1" BorderBrush="{StaticResource BorderBrush}">
-                                                                <TextBlock Text="{Binding Possibility, Converter={StaticResource PossibilityConverter}}" HorizontalAlignment="Stretch" TextAlignment="Center" VerticalAlignment="Center"/>
+                                                                <TextBlock Text="{Binding Possibility, Converter={StaticResource PossibilityConverter}}"
+                                                                           HorizontalAlignment="Stretch" TextAlignment="Center" VerticalAlignment="Center"/>
+                                                                <Border.Style>
+                                                                    <Style TargetType="Border">
+                                                                        <Style.Triggers>
+                                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                                <Setter Property="Background" Value="DarkGoldenrod"/>
+                                                                            </Trigger>
+                                                                        </Style.Triggers>
+                                                                    </Style>
+                                                                </Border.Style>
                                                             </Border>
                                                         </Grid>
                                                     </DataTemplate>
@@ -224,5 +233,12 @@
                 </DockPanel>
             </ScrollViewer>
         </Border>
+        <ListView ItemsSource="{Binding Changes}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding .}"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackPanel>
 </Window>
