--- a/ScoreCard/Views/MainWindow.xaml
+++ b/ScoreCard/Views/MainWindow.xaml
@@ -12,6 +12,7 @@
     <Window.Resources>
         <local:PossibilityConverter x:Key="PossibilityConverter"/>
         <SolidColorBrush Color="LightGray" x:Key="BorderBrush"/>
+        <SolidColorBrush Color="DarkGoldenrod" x:Key="HighlightBrush"/>
     </Window.Resources>
     <StackPanel Orientation="Horizontal">
         <Grid x:Name="Possibilities" IsSharedSizeScope="True" Margin="5">
@@ -112,15 +113,15 @@
                                                             <Grid.ColumnDefinitions>
                                                                 <ColumnDefinition SharedSizeGroup="PlayerName"/>
                                                             </Grid.ColumnDefinitions>
-                                                            <Border BorderThickness="0,0,1,1" BorderBrush="{StaticResource BorderBrush}">
+                                                            <Border BorderThickness="0,0,1,1" BorderBrush="{StaticResource BorderBrush}" MouseEnter="HighlightedItem_OnMouseEnter" MouseLeave="HighlightedItem_OnMouseLeave">
                                                                 <TextBlock Text="{Binding Possibility, Converter={StaticResource PossibilityConverter}}"
                                                                            HorizontalAlignment="Stretch" TextAlignment="Center" VerticalAlignment="Center"/>
                                                                 <Border.Style>
                                                                     <Style TargetType="Border">
                                                                         <Style.Triggers>
-                                                                            <Trigger Property="IsMouseOver" Value="True">
-                                                                                <Setter Property="Background" Value="DarkGoldenrod"/>
-                                                                            </Trigger>
+                                                                            <DataTrigger Binding="{Binding IsHighlighted}" Value="True">
+                                                                                <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
+                                                                            </DataTrigger>
                                                                         </Style.Triggers>
                                                                     </Style>
                                                                 </Border.Style>
@@ -236,7 +237,17 @@
         <ListView ItemsSource="{Binding Changes}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding .}"/>
+                    <TextBlock Text="{Binding .}" MouseEnter="HighlightedItem_OnMouseEnter" MouseLeave="HighlightedItem_OnMouseLeave">
+                        <TextBlock.Style>
+                            <Style TargetType="TextBlock">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Possibility.IsHighlighted}" Value="True">
+                                        <Setter Property="Background" Value="{StaticResource HighlightBrush}"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBlock.Style>
+                    </TextBlock>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
