--- a/ScoreCard/Views/SuggestionResponseDialog.xaml
+++ b/ScoreCard/Views/SuggestionResponseDialog.xaml
@@ -16,7 +16,7 @@
                 <Style TargetType="UniformGrid">
                     <Setter Property="Columns" Value="2"/>
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding Cards.Count}" Value="0">
+                        <DataTrigger Binding="{Binding CanChooseCard}" Value="False">
                             <Setter Property="Columns" Value="3"/>
                         </DataTrigger>
                     </Style.Triggers>
@@ -38,7 +38,7 @@
                     <Style TargetType="Button" BasedOn="{StaticResource ResultButton}">
                         <Setter Property="Visibility" Value="Collapsed"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding Cards.Count}" Value="0">
+                            <DataTrigger Binding="{Binding CanChooseCard}" Value="False">
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
                         </Style.Triggers>
